add_library(strategies_lib STATIC GameStrategy.h
            Trivial_Always_C/Trivial_Always_C.cpp
            Trivial_Always_D/Trivial_Always_D.cpp
            Trivial_Random/Trivial_Random.cpp
            Friendly_Fool/Friendly_Fool.cpp
            Probability/Probability.cpp
            Dominator/Dominator.cpp)